# bb-tech-challenge

./: .gitignore  Makefile  README.md  main.py  mlflow.db  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
artifacts/: best_model.pkl  model_metadata.json  preprocessor.pkl
logs/: predictions.db
mlartifacts/1/models/m-359ed655fe7c48fb9b43d765907d385e/artifacts/: MLmodel
mlartifacts/1/models/m-3956f3e15f4c472b95bf27ea86f896c1/artifacts/: MLmodel  conda.yaml
mlartifacts/1/models/m-54f4c3b9eca54beb8d99ba0ac5316d40/artifacts/: MLmodel  model.pkl
mlartifacts/1/models/m-63d885d502d641fb87342193367e9024/artifacts/: MLmodel  model.pkl
mlartifacts/1/models/m-6d87d8fa8c8740efbbffe1625f4b362a/artifacts/: MLmodel
mlartifacts/1/models/m-6f9cb538fb624e60b0bf2a48f6caf314/artifacts/: MLmodel
notebooks/: dataset_exploration.ipynb  eda_analysis.ipynb
src/: config.py
src/api/: app.py
src/data/: preprocessing.py  validation.py
src/logging/: batch_inference.py  prediction_logger.py
src/models/: evaluate.py  train.py
src/monitoring/: drift_monitor.py
src/monitoring/reports/: drift_report_2026-02-10_01-17-06.json  drift_report_2026-02-10_01-17-06.md  drift_report_2026-02-12_09-00-17.json  drift_report_2026-02-12_09-00-17.md  drift_report_2026-02-12_11-27-47.json  drift_report_2026-02-12_11-27-47.md
src/prediction_logging/: batch_inference.py  prediction_logger.py
src/utils/: artifacts.py
tests/: mlflow.db  test_api.py  test_monitoring.py  test_prediction_logger.py  test_preprocessing.py  tests.py
(+8 files in other folders)
